test/errors/return_mismatch.luv
# RET: 1
# ERR: {self}:5:12:    return 44
# ERR: {ssss}                 ^ error: Cannot convert type i32 to expected return type str.
def str func():
    return 44
def int main():
    func()
